--- a/shmelcom/package.json
+++ b/shmelcom/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
+    "@heroicons/react": "^2.0.16",
     "@vitejs/plugin-react": "^3.1.0",
     "css": "^3.0.0",
     "react": "^18.2.0",
@@ -40,6 +42,8 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "file-loader": "^6.2.0",
+    "headlessui": "^0.0.0",
+    "heroicons": "^2.0.16",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "tailwindcss": "^3.2.7",
