--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "css": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "styled": "^1.0.0",
     "styled-components": "^5.3.9",
     "ts-node": "^10.9.1",
