--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@heroicons/react": "^2.0.16",
     "@vitejs/plugin-react": "^3.1.0",
     "css": "^3.0.0",
+    "effector": "^22.8.1",
+    "effector-react": "^22.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "styled": "^1.0.0",
     "styled-components": "^5.3.9",
+    "three": "^0.151.3",
     "ts-node": "^10.9.1",
     "vite": "^4.2.0",
     "vite-plugin-svgr": "^2.4.0"
@@ -27,6 +30,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
+    "@types/three": "^0.150.1",
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
