--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "css": "^3.0.0",
     "effector": "^22.8.1",
     "effector-react": "^22.5.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-router-dom": "^6.10.0",
+    "sort-by": "^0.0.2",
     "styled": "^1.0.0",
     "styled-components": "^5.3.9",
     "three": "^0.151.3",
